# cpp-oop-lab

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
concepts/basic_class/: CMakeLists.txt  README.md  Rectangle.cpp  Rectangle.h  main.cpp
concepts/employee/: Employee.cpp  Employee.h  EmployeeManagement.cpp  OfficeEmployee.cpp  OfficeEmployee.h  Worker.cpp  Worker.h  main.cpp
concepts/employee-simplified/: CMakeLists.txt  Employee.cpp  EmployeeManagement.cpp  OfficeEmployee.cpp  Worker.cpp  main.cpp
concepts/inheritance/: Animal.cpp  Animal.h  Cat.cpp  Cat.h  Dog.cpp  Dog.h  EXERCISES.md  README.md  STUDY_NOTES.md  main.cpp
concepts/operator/: Monomial.cpp
scripts/: create_class.py  create_concept.py
